--- a/android-exoplayer/build.gradle
+++ b/android-exoplayer/build.gradle
@@ -32,14 +32,24 @@ dependencies {
         exclude group: 'com.android.support'
     }
 
+    // Filter Library for Android
+    implementation 'com.github.MasayukiSuda:ExoPlayerFilter:v0.2.4'
+    implementation 'com.github.MasayukiSuda:Mp4Composer-android:v0.2.0'
+
     // All support libs must use the same version
     implementation "androidx.annotation:annotation:1.1.0"
     implementation "androidx.core:core:1.1.0"
     implementation "androidx.media:media:1.1.0"
 
+    implementation "com.android.support:support-annotations:${safeExtGet('supportLibVersion', '28.0.0')}"
+    implementation "com.android.support:support-compat:${safeExtGet('supportLibVersion', '28.0.0')}"
+    implementation "com.android.support:support-media-compat:${safeExtGet('supportLibVersion', '28.0.0')}"
+
     implementation('com.google.android.exoplayer:extension-okhttp:2.11.4') {
         exclude group: 'com.squareup.okhttp3', module: 'okhttp'
     }
     implementation 'com.squareup.okhttp3:okhttp:3.14.3'
+
+    implementation 'com.android.support:support-annotations:28.0.0'
 
 }
